Define size and background colors of sections

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
+    <header class="full-screen blue">
       <h1>Patrice-H développeur web</h1>
     </header>
     <main>
-      <section>
+      <section class="full-screen purple">
         <h2>à propos</h2>
       </section>
-      <section>
+      <section class="full-screen blue">
         <h2>mes compétences</h2>
       </section>
-      <section>
+      <section class="full-screen purple">
         <h2>mes projets</h2>
       </section>
-      <section>
+      <section class="full-screen blue">
         <h2>contactez moi</h2>
       </section>
     </main>
