--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header class="full-screen blue">
+    <header class="full-screen blue" id="home">
+      <nav class="blue">
+        <a href="#home">accueil</a>
+        <a href="#about">à propos</a>
+        <a href="#skills">compétences</a>
+        <a href="#projects">projets</a>
+        <a href="#contact">contact</a>
+      </nav>
       <h1>Patrice-H développeur web</h1>
     </header>
     <main>
-      <section class="full-screen purple">
+      <section class="full-screen purple" id="about">
         <h2>à propos</h2>
       </section>
-      <section class="full-screen blue">
+      <section class="full-screen blue" id="skills">
         <h2>mes compétences</h2>
       </section>
-      <section class="full-screen purple">
+      <section class="full-screen purple" id="projects">
         <h2>mes projets</h2>
       </section>
-      <section class="full-screen blue">
+      <section class="full-screen blue" id="contact">
         <h2>contactez moi</h2>
       </section>
     </main>
