Display or hide the shadow of the menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="full-screen blue" id="home">
-      <nav class="blue">
+      <nav class="blue" id="navbar">
         <a href="#home">accueil</a>
         <a href="#about">à propos</a>
         <a href="#skills">compétences</a>
@@ -33,5 +33,6 @@
       </section>
     </main>
     <footer></footer>
+    <script src="script.js"></script>
   </body>
 </html>
