Display all skills

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </section>
       <section class="full-screen blue" id="skills">
         <h2>mes compétences</h2>
+        <div id="skills-container"></div>
       </section>
       <section class="full-screen purple" id="projects">
         <h2>mes projets</h2>
@@ -33,6 +34,6 @@
       </section>
     </main>
     <footer></footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
