Display all projects

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </section>
       <section class="full-screen purple" id="projects">
         <h2>mes projets</h2>
+        <div id="projects-container"></div>
       </section>
       <section class="full-screen blue" id="contact">
         <h2>contactez moi</h2>
