Add the contact section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,29 @@
       </section>
       <section class="full-screen blue">
         <h2>contactez moi</h2>
+        <div id="contact-form">
+          <form method="post">
+            <label for="lastname">Nom</label>
+            <input type="text" name="lastname" id="lastname" required />
+            <label for="firstname">Prénom</label>
+            <input type="text" name="firstname" id="firstname" required />
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" required />
+            <label for="subject">Sujet</label>
+            <input type="text" name="subject" id="subject" required />
+            <label for="message">Message</label>
+            <textarea name="message" id="message" required></textarea>
+            <button type="submit" id="submit-btn">Envoyer</button>
+          </form>
+        </div>
+        <div id="social-media">
+          <a href="https://www.linkedin.com/in/patrice-h-b64439257/"
+            ><img src="assets/linkedin.png" alt="LinkedIn"
+          /></a>
+          <a href="https://github.com/Patrice-H"
+            ><img src="assets/github.png" alt="GitHub"
+          /></a>
+        </div>
       </section>
     </main>
     <footer></footer>
