Add a line to form

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
               </div>
               <textarea name="message" id="message" required></textarea>
             </div>
+            <div>
+              <span class="asterisk">*</span>
+              <span>Tous les champs du formulaire sont requis</span>
+            </div>
             <button type="submit" id="submit-btn">Envoyer</button>
           </form>
         </div>
