Update styles links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
               <span class="asterisk">*</span>
               <span>Tous les champs du formulaire sont requis</span>
             </div>
-            <button type="submit" id="submit-btn">Envoyer</button>
+            <button type="submit" class="button" id="submit-btn">
+              Envoyer
+            </button>
           </form>
         </div>
         <div id="social-media">
