Add class for stylization

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <section class="full-screen purple" id="about-me">
-        <h2>à propos</h2>
+        <h2 class="home-sections">à propos</h2>
         <p class="about-me-text">
           <img
             src="assets/about.jpg"
@@ -64,17 +64,17 @@
         <div class="anchor purple" id="skills"></div>
       </section>
       <section class="full-screen blue long">
-        <h2>mes compétences</h2>
+        <h2 class="home-sections">mes compétences</h2>
         <div id="skills-container"></div>
         <div class="anchor blue" id="projects"></div>
       </section>
       <section class="full-screen purple long">
-        <h2>mes projets</h2>
+        <h2 class="home-sections">mes projets</h2>
         <div id="projects-container"></div>
         <div class="anchor purple" id="contact"></div>
       </section>
       <section class="full-screen blue">
-        <h2>contactez moi</h2>
+        <h2 class="home-sections">contactez moi</h2>
         <div id="contact-form">
           <form method="post">
             <div class="contact-form-element">
