Add a back link

--- a/details.html
+++ b/details.html
@@ -8,6 +8,7 @@
     <title>Détails du projet</title>
   </head>
   <body class="blue">
+    <a href="./" class="back-link" title="retour">&#9754;</a>
     <div class="banner">
       <iframe class="banner-frame" id="banner-iframe"></iframe>
       <div class="banner-mask"></div>
