Add menu for mobile version

--- a/home.html
+++ b/home.html
@@ -16,11 +16,16 @@
   <body>
     <header class="full-screen blue" id="home">
       <nav class="blue" id="navbar">
-        <a href="#home">accueil</a>
-        <a href="#about">à propos</a>
-        <a href="#skills">compétences</a>
-        <a href="#projects">projets</a>
-        <a href="#contact">contact</a>
+        <img
+          src="assets/hamburger-menu.png"
+          alt="menu"
+          id="hamburger-menu-btn"
+        />
+        <a href="#home" class="menu-item">accueil</a>
+        <a href="#about" class="menu-item">à propos</a>
+        <a href="#skills" class="menu-item">compétences</a>
+        <a href="#projects" class="menu-item">projets</a>
+        <a href="#contact" class="menu-item">contact</a>
       </nav>
       <h1>Patrice-H <br />développeur web</h1>
       <p id="slogan">Contruisons ensemble vos projets numériques</p>
