--- a/details.html
+++ b/details.html
@@ -20,7 +20,7 @@
       <p id="project-description"></p>
     </div>
     <div class="links">
-      <a href="" id="project-demo" class="button">Voir la demo</a>
+      <a href="" id="project-demo" class="button">Voir la démo</a>
       <a href="" id="project-code" class="button">Voir le code</a>
     </div>
     <script type="module">
