--- a/home.html
+++ b/home.html
@@ -43,23 +43,25 @@
             alt="livre transformé en ordinateur portable"
             class="about-me-img desktop"
           />
-          Bonjour, je m'appelle patrice. Après 29 ans dans le domaine de
+          Bonjour, je m'appelle Patrice. Après 29 ans dans le domaine de
           l'imprimerie et des arts graphiques, j'ai fait le choix de me
           reconvertir en tant que Développeur Web.<br /><br />
-          Passionné de nouvelle technologies, de photographie et de modélisation
-          3D, j'ai tout d'abord entrepris une formation en cours du soir de
-          webmestre au CNAM. De là, j'ai découvert mon goût pour la
-          programmation web et décidé de pousuivre par une formation diplomante
-          d'analyste programmeur web, avec le même organisme de formation.<br /><br />
-          Dernièrement, je me suis spécialisé sur le développement frontend avec
-          Javascript et React en suivant une formation à distance, basée sur la
-          pédagogie par projets d'OpenClassrooms. Cela m'a permis de travailler
-          sur des cas concrets et de décrocher le diplôme de niveau 6 reconnu
-          bac +3/4.<br /><br />
+          Passionné de nouvelles technologies, de photographie et de
+          modélisation 3D, j'ai tout d'abord entrepris une formation de
+          webmestre en cours du soir au CNAM, qui m'a conduit à développer un
+          intérêt pour la programmation web. J'ai donc décidé de poursuivre par
+          une formation diplômante d'analyste programmeur web avec le même
+          organisme de formation.<br /><br />
+          Dernièrement, je me suis spécialisé dans le développement frontend
+          avec Javascript et la technologie React, en suivant une formation à
+          distance basée sur la pédagogie par projets d'OpenClassrooms. Cette
+          formation m'a permis de travailler sur des cas concrets et d'obtenir
+          le diplôme de niveau 6 reconnu bac +3/4.<br /><br />
           Curieux par nature, je reste toujours en veille sur l'avancée des
-          technologies de communication numérique et en constante amélioration
-          de mes techniques avec pour seul objectif : la satisfaction
-          d'accomplir aux mieux les missions, qui me sont confiées.
+          technologies de communication numérique et je suis engagé dans un
+          processus d'amélioration constante de mes techniques avec pour seul
+          objectif : la satisfaction d'accomplir au mieux les missions qui me
+          sont confiées.
         </p>
         <img
           src="assets/about.jpg"
@@ -79,7 +81,7 @@
         <div class="anchor purple" id="contact"></div>
       </section>
       <section class="full-screen blue">
-        <h2 class="home-sections">contactez moi</h2>
+        <h2 class="home-sections">contactez-moi</h2>
         <div id="contact-form">
           <form method="post">
             <div class="contact-form-element">
