--- a/home.html
+++ b/home.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio de Patrice-h, développeur web spécialisé frontend, contenant ses compétences en développent web, ses projets web réalisés et un formulaire de contact"
+    />
+    <meta
+      name="keywords"
+      content="développement web, développeur, intégrateur, frontend, HTML5, CSS3, JavaScript, React, nodeJs"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Portfolio</title>
+    <title>Patrice-H Portfolio</title>
   </head>
   <body>
     <header class="full-screen blue" id="home">
