--- a/home.html
+++ b/home.html
@@ -148,10 +148,12 @@
           </form>
         </div>
         <div id="social-media">
-          <a href="https://www.linkedin.com/in/patrice-h-b64439257/"
+          <a
+            href="https://www.linkedin.com/in/patrice-h-b64439257/"
+            id="linkedin"
             ><img src="assets/linkedin.png" alt="LinkedIn"
           /></a>
-          <a href="https://github.com/Patrice-H"
+          <a href="https://github.com/Patrice-H" id="github"
             ><img src="assets/github.png" alt="GitHub"
           /></a>
         </div>
