Add 3 pts animation

--- a/home.html
+++ b/home.html
@@ -44,7 +44,14 @@
     </header>
     <main>
       <section class="full-screen purple" id="about-me">
-        <h2 class="home-sections">à propos</h2>
+        <h2 class="home-sections">
+          à propos
+          <div class="anim-3pts">
+            <span class="pt1">.</span>
+            <span class="pt2">.</span>
+            <span class="pt3">.</span>
+          </div>
+        </h2>
         <p class="about-me-text">
           <img
             src="assets/about.jpg"
@@ -90,17 +97,40 @@
         <div class="anchor purple" id="skills"></div>
       </section>
       <section class="full-screen blue long">
-        <h2 class="home-sections">mes compétences</h2>
-        <div id="skills-container"></div>
+        <h2 class="home-sections">
+          mes compétences
+          <div class="anim-3pts">
+            <span class="pt1">.</span>
+            <span class="pt2">.</span>
+            <span class="pt3">.</span>
+          </div>
+        </h2>
+        <div id="skills-container">
+          <div id="mask-skills"></div>
+        </div>
         <div class="anchor blue" id="projects"></div>
       </section>
       <section class="full-screen purple long">
-        <h2 class="home-sections">mes projets</h2>
+        <h2 class="home-sections">
+          mes projets
+          <div class="anim-3pts">
+            <span class="pt1">.</span>
+            <span class="pt2">.</span>
+            <span class="pt3">.</span>
+          </div>
+        </h2>
         <div id="projects-container"></div>
         <div class="anchor purple" id="contact"></div>
       </section>
       <section class="full-screen blue">
-        <h2 class="home-sections">contactez-moi</h2>
+        <h2 class="home-sections">
+          contactez-moi
+          <div class="anim-3pts">
+            <span class="pt1">.</span>
+            <span class="pt2">.</span>
+            <span class="pt3">.</span>
+          </div>
+        </h2>
         <div id="contact-form">
           <form method="post">
             <div class="contact-form-element">
