Add skills animation

--- a/home.html
+++ b/home.html
@@ -106,9 +106,8 @@
             <span class="pt3">.</span>
           </div>
         </h2>
-        <div id="skills-container">
-          <!--<div id="mask-skills"></div>-->
-        </div>
+
+        <div id="skills-container"><div id="mask-skills"></div></div>
         <div class="anchor blue" id="projects"></div>
       </section>
       <section class="full-screen purple long">
