Modify contact animation

--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
             <span class="pt3">.</span>
           </div>
         </h2>
-        <div id="contact-form" class="hidden">
+        <div id="contact-form">
           <form method="post">
             <div class="contact-form-element">
               <div class="first-line">
@@ -180,10 +180,9 @@
           <a
             href="https://www.linkedin.com/in/patrice-h-b64439257/"
             id="linkedin"
-            class="hidden"
             ><img src="assets/linkedin.png" alt="LinkedIn"
           /></a>
-          <a href="https://github.com/Patrice-H" id="github" class="hidden"
+          <a href="https://github.com/Patrice-H" id="github"
             ><img src="assets/github.png" alt="GitHub"
           /></a>
         </div>
