--- a/home.html
+++ b/home.html
@@ -46,11 +46,7 @@
       <section class="full-screen purple" id="about-me">
         <h2 class="home-sections">
           à propos
-          <div class="anim-3pts">
-            <span class="pt1">.</span>
-            <span class="pt2">.</span>
-            <span class="pt3">.</span>
-          </div>
+          <div class="anim-3pts"></div>
         </h2>
         <p class="about-me-text hidden" id="about-text">
           <img
@@ -100,11 +96,7 @@
       <section class="full-screen blue long">
         <h2 class="home-sections">
           mes compétences
-          <div class="anim-3pts">
-            <span class="pt1">.</span>
-            <span class="pt2">.</span>
-            <span class="pt3">.</span>
-          </div>
+          <div class="anim-3pts"></div>
         </h2>
         <div id="skills-container"></div>
         <div class="anchor blue" id="projects"></div>
@@ -112,11 +104,7 @@
       <section class="full-screen purple long">
         <h2 class="home-sections">
           mes projets
-          <div class="anim-3pts">
-            <span class="pt1">.</span>
-            <span class="pt2">.</span>
-            <span class="pt3">.</span>
-          </div>
+          <div class="anim-3pts"></div>
         </h2>
         <div id="projects-container"></div>
         <div class="anchor purple" id="contact"></div>
@@ -124,11 +112,7 @@
       <section class="full-screen blue">
         <h2 class="home-sections">
           contactez-moi
-          <div class="anim-3pts">
-            <span class="pt1">.</span>
-            <span class="pt2">.</span>
-            <span class="pt3">.</span>
-          </div>
+          <div class="anim-3pts"></div>
         </h2>
         <div id="contact-form">
           <form method="post">
