--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <title>Patrice-H Portfolio</title>
   </head>
   <body>
-    <header class="full-screen blue" id="home">
+    <header class="blue" id="home">
       <nav class="blue" id="navbar">
         <img
           src="assets/hamburger-menu.png"
@@ -36,13 +36,15 @@
         <a href="#contact" class="menu-item" id="contact-link">contact</a>
       </nav>
       <h1>Patrice-H <br />développeur web</h1>
-      <p id="slogan">Contruisons ensemble vos projets numériques</p>
-      <div id="hand-held-out">
-        <img src="assets/hand.jpg" alt="main tendue" />
-      </div>
-      <div class="anchor blue" id="about"></div>
     </header>
     <main>
+      <section class="full-screen blue" id="home-section">
+        <p id="slogan">Contruisons ensemble vos projets numériques</p>
+        <div id="hand-held-out">
+          <img src="assets/hand.jpg" alt="main tendue" />
+        </div>
+        <div class="anchor blue" id="about"></div>
+      </section>
       <section class="full-screen purple" id="about-me">
         <h2 class="home-sections">
           à propos
