Update img src for contact btns

--- a/home.html
+++ b/home.html
@@ -166,10 +166,10 @@
           <a
             href="https://www.linkedin.com/in/patrice-h-b64439257/"
             id="linkedin"
-            ><img src="assets/linkedin.png" alt="LinkedIn"
+            ><img src="assets/contact-linkedin.png" alt="LinkedIn"
           /></a>
           <a href="https://github.com/Patrice-H" id="github"
-            ><img src="assets/github.png" alt="GitHub"
+            ><img src="assets/contact-github.png" alt="GitHub"
           /></a>
         </div>
       </section>
